# osu-replay-parser

./: .buildinfo  .gitignore  .travis.yml  LICENSE  README.md  appendix.html  genindex.html  index.html  objects.inv  parsing-replays.html  py-modindex.html  pyproject.toml  replay3.parquet  search.html  searchindex.js  setup.py  writing-replays.html
.github/workflows/: osucore.yml
_modules/: index.html
_modules/osrparse/: replay.html  utils.html
_static/: documentation_options.js
circleparse/: __init__.py  beatmap.py  constants.py  curves.py  enums.py  hitobject.py  replay.py
docs/: appendix.rst  conf.py  index.rst  parsing-replays.rst  writing-replays.rst
osrparse/: __init__.py  dump.py  enums.py  parse.py  replay.py  strategies.py  utils.py
osucore/: Cargo.toml  pyproject.toml
osucore/resources/: replay.osr
osucore/src/: config.rs  flags.rs  game_mode.rs  lib.rs  life_bar_state.rs  main.rs  parser.rs  replay.rs  replay_events.rs
tests/: __init__.py  replay.py  replay_test.py  test.py  test_dumping.py  test_replay.py
tests/resources/: ctb.osr  lazer_standard_format.osr  lazer_with_score_info.osr  mania.osr  replay.osr  replay2.osr  taiko.osr
