[project]
name = "osrparse"
version = "7.0.0"
description = "Parser for osr files and lzma replay streams for osu!"
readme = "README.md"
keywords = ["osu!", "osr", "replay", "replays", "parsing", "parser", "python"]
authors = [
  {name = "Kevin Lim",  email = "kszlim@gmail.com"      },
  {name = "Liam DeVoe", email = "orionldevoe@gmail.com" }
]
classifiers = [
  "Topic :: Games/Entertainment",
  "Topic :: Software Development :: Libraries",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
]

[project.optional-dependencies]
dev = ["hypothesis"]

[project.urls]
"Homepage" = "https://github.com/kszlim/osu-replay-parser"
